# food

./: .gitignore  AGENTS.md  Cargo.toml  README.md  cache-pub-key.pem  flake.nix  result  result-1  result-client-a  wrangler.toml
.github/workflows/: ci-r2.yml  ci.yml  deploy.yml  pr-preview-cleanup.yml  pr-preview.yml
.wrangler/: dist
crates/app/: Cargo.toml
crates/app/src/: about.rs  auth.rs  cache.rs  components.rs  food_log.rs  icons.rs  ingredients.rs  lib.rs  pages.rs  recipes.rs  settings.rs  theme.rs
crates/client/: Cargo.toml
crates/client/src/: lib.rs
crates/worker/: Cargo.toml
crates/worker/src/: lib.rs
e2e-tests/src/: main.rs
migrations/: 0001_create_ingredients.sql  0002_create_recipes.sql  0003_ingredient_labels.sql  0004_create_food_logs.sql  0005_add_crop_rotation.sql
nix/: README.md  generate-content-hash.sh  pr-snapshots.sh  run-e2e-tests.sh  screenshot.js
