[package]
name = "food-lemmih-com-app"
version.workspace = true
edition.workspace = true
publish = false

[lib]
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[features]
default = []
ssr = ["leptos/ssr", "leptos_router/ssr", "leptos_meta/ssr", "dep:worker"]

[dependencies]
leptos = { workspace = true }
leptos_router = { workspace = true }
leptos_config = { workspace = true }
leptos_meta = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
server_fn = { workspace = true }
gloo-storage = { workspace = true }
log = { workspace = true }
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }
web-sys = { workspace = true, features = ["HtmlElement", "KeyboardEvent", "MouseEvent", "EventTarget", "Window", "MediaQueryList", "Document", "Element", "DomTokenList", "HtmlSelectElement", "HtmlInputElement", "FileList", "File", "FileReader", "Blob", "BlobPropertyBag", "FormData", "Request", "RequestInit", "Response", "DomRect"] }
getrandom = { workspace = true }
hex = { workspace = true }
js-sys = { workspace = true }
worker = { workspace = true, optional = true }
send_wrapper = { workspace = true }
base64 = { workspace = true }
futures = { workspace = true }
