[package]
name = "food-lemmih-com-worker"
version.workspace = true
edition.workspace = true
publish = false

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
axum = { workspace = true }
console_error_panic_hook = { workspace = true }
console_log = { workspace = true }
food-lemmih-com-app = { path = "../app", features = ["ssr"] }
leptos = { workspace = true, features = ["ssr"] }
leptos_axum = { workspace = true }
leptos_router = { workspace = true, features = ["ssr"] }
leptos_meta = { workspace = true, features = ["ssr"] }
leptos_config = { workspace = true }
log = { workspace = true }
send_wrapper = { workspace = true }
server_fn = { workspace = true, features = ["axum-no-default"] }
tower-service = { workspace = true }
wasm-bindgen = { workspace = true }
worker = { workspace = true, features = ["http"] }
